ランキング表示UIを変更

--- a/index.html
+++ b/index.html
@@ -287,8 +287,12 @@ to create this map.
 
                                 <div class="result4" id="ranking">
                                     <div id="ranking_letter">ランキング</div>
-                                    <div id="ranking_value_letter_1">上位:<span id="edit_area_rank_percent">12%</span></div>
-                                    <div id="ranking_value_letter_2"><span id="edit_area_rank">12位</span><span id="edit_area_rank_population_parameter">(123人中)</span></div>
+                                    <div id="ranking_content">
+                                        <div>
+                                            <div id="ranking_value_letter_1">上位:<span id="edit_area_rank_percent">**%</span></div>
+                                            <div id="ranking_value_letter_2"><span id="edit_area_rank">**位</span><span id="edit_area_rank_population_parameter">(**人中)</span></div>
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <div id="edit_area_comment"></div>
